syntax = "proto3";

package auth;
option go_package = "cec/services/auth/proto/gen";

service AuthService {
  // Existing endpoints
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

enum UserRole {
  USER = 0;
  DELIVERY_AGENT = 1;
  MANAGER = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  UserRole role = 3;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  UserRole role = 3;
}

message RegisterResponse {
  string id = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  BaseResponse base = 3;
}

// common
message BaseResponse {
  int32 code = 1;
  string message = 2;
}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

message Empty {}
// common